--- a/productfull.html
+++ b/productfull.html
@@ -17,20 +17,20 @@
             </div>
             <div class="mid">
                 <ul class="navbar">
-                    <li><a href="index.html">index</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="aboutus.html">ABOUT US</a></li>
                     <li><a href="faq.html">FAQs</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
-                    <li><a href="SELL.html">PRODUCT</a></li>
+                    <li><a href="sell.html">PRODUCT</a></li>
                 </ul>
                 <div class="dropdown">
                     <button class="dropbtn">Main Menu</button>
                     <div class="dropdown-content">
-                        <a href="index.html">index</a>
+                        <a href="index.html">HOME</a>
                         <a href="aboutus.html">ABOUT US</a>
                         <a href="faq.html">FAQs</a>
                         <a href="contact.html">CONTACT US</a>
-                        <li><a href="SELL.html">PRODUCT</a></li>
+                        <li><a href="sell.html">PRODUCT</a></li>
                     </div>
                 </div>
             </div>
