--- a/contact.html
+++ b/contact.html
@@ -20,21 +20,21 @@
             </div>
             <div class="mid">
                 <ul class="navbar">
-                    <li><a href="index.html">index</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="aboutus.html">ABOUT US</a></li>
                     <li><a href="faq.html">FAQs</a></li>
 
                     <li><a href="contact.html">CONTACT US</a></li>
-                    <li><a href="SELL.html">PRODUCT</a></li>
+                    <li><a href="sell.html">PRODUCT</a></li>
                 </ul>
                 <div class="dropdown">
                     <button class="dropbtn">Main Menu</button>
                     <div class="dropdown-content">
-                        <a href="index.html">index</a>
+                        <a href="index.html">HOME</a>
                         <a href="aboutus.html">ABOUT US</a>
                         <a href="faq.html">FAQs</a>
                         <a href="contact.html">CONTACT US</a>
-                        <li><a href="SELL.html">PRODUCT</a></li>
+                        <li><a href="sell.html">PRODUCT</a></li>
                     </div>
                 </div>
             </div>
@@ -49,7 +49,13 @@
                 <h1>Contact Us</h1>
                 <p><i class="fa fa-envelope"></i> <a
                         href="mailto:rahuljcsuthar@gmail.com">rahuljcsuthar@gmail.com</a></p>
-                <p><i class="fa fa-phone"></i> 9660632687</p>
+                <p><i class="fa fa-envelope"></i> <a
+                        href="mailto:Harshplsuthar1@gmail.com">Harshplsuthar1@gmail.com</a></p>
+                <p><i class="fa fa-envelope"></i> <a
+                        href="mailto:lokeshyadav2505@gmail.com">lokeshyadav2505@gmail.com</a></p>
+                <p><i class="fa fa-envelope"></i> <a
+                        href="mailto:jalpeshmeghwanshi1@gmail.com">jalpeshmeghwanshi1@gmail.com</a></p>
+                
                 <p><i class="fa fa-map-marker"></i> Sardar Vallabhbhai Patel
                     Institute of Technology, Vasad</p>
             </div>
