--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
             </div>
             <div class="mid">
                 <ul class="navbar">
-                    <li><a href="index.html">index</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="aboutus.html">ABOUT US</a></li>
                     <li><a href="faq.html">FAQs</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
@@ -29,7 +29,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">Main Menu</button>
                     <div class="dropdown-content">
-                        <a href="index.html">index</a>
+                        <a href="index.html">HOME</a>
                         <a href="aboutus.html">ABOUT US</a>
                         <a href="faq.html">FAQs</a>
                         <a href="contact.html">CONTACT US</a>
@@ -50,8 +50,8 @@
                     class="img">
                 <div class="imgdesc">
                     <p class="name"><b>Rahul Suthar</b></p>
-                    <p class="work"><b>Front-End Developer</b></p>
-                    <p class="lang"><b>Deals with HTML, CSS</b></p>
+                    <p class="work"><b>Fullstack Developer</b></p>
+                    <p class="lang"><b>Deals with HTML, CSS, JS, MYSQL & PHP</b></p>
                 </div>
                 <div class="connect">
                     <h3>Connect with Him</h3>
@@ -73,7 +73,7 @@
                 <div class="imgdesc">
                     <p class="name"><b>Harsh Suthar</b></p>
                     <p class="work"><b>Front-End Developer</b></p>
-                    <p class="lang"><b>Deals with HTML, CSS</b></p>
+                    <p class="lang"><b>Deals with HTML, CSS, JS & REACTNATIVE</b></p>
                 </div>
                 <div class="connect">
                     <h3>Connect with Him</h3>
@@ -94,8 +94,8 @@
                     class="img">
                 <div class="imgdesc">
                     <p class="name"><b>Lokesh Yadav</b></p>
-                    <p class="work"><b>Front-End Developer</b></p>
-                    <p class="lang"><b>Deals with HTML, CSS</b></p>
+                    <p class="work"><b>Back-end Developer</b></p>
+                    <p class="lang"><b>Deals with PHP, MYSQL & PYTHON</b></p>
                 </div>
                 <div class="connect">
                     <h3>Connect with Him</h3>
