--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rethread-you ewaste friend </title>
+        <title>Rethread-your ewaste friend </title>
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="navbar.css">
 
@@ -44,7 +44,7 @@
         </header>
 
         <div class="poster">
-            <img src="Images/poster1.webp" alt="Poster Image">
+            <img src="Images/logo.png" alt="Poster Image">
         </div>
 
         <div class="title">
