--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="navbar.css">
 
-        <link rel="icon" href="Images/logo.png" type="image/x-icon">
+        <link rel="icon" href="Images/logo.jpg" type="image/x-icon">
 
     </head>
 
